# emircad

./: .gitignore  CMakeLists.txt  GIT_CLEANUP_INSTRUCTIONS.md  OCCT_OOP_ARCHITECTURE.md  OOP_ARCHITECTURE.md  OOP_IMPLEMENTATION_COMPLETE.md  QUICKREF.md  QUICKSTART.md  README.md  SETUP.md  STEEL_PROFILES.md  SUCCESS.md  USAGE_EXAMPLES.cpp  build.ps1  install-occ-simple.ps1  install-occ.ps1  run.ps1  verify-simple.ps1  verify.ps1
include/: AssemblyCommand.h  BeamCommand.h  CADCommand.h  CADController.h  ColumnCommand.h  GeometryBuilder.h  MainWindow.h  OCCTViewer.h  ProfileSelectionDialog.h  PropertiesPanel.h  SlabCommand.h  SnapManager.h  SnapToolbar.h  SteelProfile.h  TAssembly.h  TBeam.h  TColumn.h  TGraphicObject.h  TObjectCollection.h  TSlab.h  WorkPlane.h  WorkPlaneDialog.h
src/: AssemblyCommand.cpp  BeamCommand.cpp  CADCommand.cpp  CADController.cpp  ColumnCommand.cpp  GeometryBuilder.cpp  MainWindow.cpp  OCCTViewer.cpp  ProfileSelectionDialog.cpp  PropertiesPanel.cpp  SlabCommand.cpp  SnapManager.cpp  SnapToolbar.cpp  SteelProfile.cpp  TAssembly.cpp  TBeam.cpp  TColumn.cpp  TGraphicObject.cpp  TObjectCollection.cpp  TSlab.cpp  WorkPlane.cpp  WorkPlaneDialog.cpp  main.cpp
